# DataFrameup

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/flask/: app.py  requirements.txt  run.sh.example
examples/flask/templates/: example.j2.html
frameup/: __init__.py  frameup.py  serve.py
frameup/templates/: example.html  example.j2.html
tests/: test_dataframeup.py  test_frameup.py
