[tool.poetry]
name = "frameup"
version = "0.1.1"
description = "DataFrames all up in your web applications"
authors = ["Scott Bradley <scott@codeslick.com>"]
licence = "MIT"
readme = "README.md"
homepage = "https://github.com/scott2b/DataFrameup"
repository = "https://github.com/scott2b/DataFrameup"
keywords = ["Pandas", "DataFrame", "web applications"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
frameup = "frameup.serve:main"
